--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -35,6 +35,9 @@ body {
     padding: 160px 0 180px;
 }
 
+.main__test{
+    padding: 180px 0 195px;
+}
 
 
 .button {
@@ -837,7 +840,7 @@ z-index:0
 
 
 
-/* ------------------dots------------------------------- */
+
 
 .slick-dots {
     text-align: center;
@@ -860,4 +863,65 @@ z-index:0
 
 .slick-dots li[class="slick-active"] button {
     background: #FFCF2D;
+}
+
+/* ------------------dots------------------------------- */
+
+.test {
+    /* background: url("../images/decor/shapes-team.svg") 200px 30px no-repeat; */
+    background-color: #F4F5F6;
+    position: relative;
+    z-index:0
+    }
+    
+
+
+.test__inner{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.test__heading {
+ margin-bottom: 60px;
+ text-align: center;
+}
+
+.test__slider{
+    background: white;
+    width: 1020px;
+    height: 344px;
+   padding: 64px 105px 64px 105px;
+}
+
+.test__content{
+    display: flex;
+    align-items: start;
+}
+
+.test__paragraph{
+    width: 752px;
+font-size: 20px;
+font-weight: 400;
+line-height: 150%; /* 30px */ 
+margin: 0 0 24px 30px;
+
+}
+
+.test__photo{
+    margin-left: 58px;
+}
+
+.test_name{
+  color: #1E212C;
+    font-weight: 700;
+    line-height: 160%; 
+}
+
+.test__position{
+    color:#787A80;
+font-size: 14px;
+font-weight: 400;
+line-height: 150%; /* 21px */ 
 }
