--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -36,6 +36,10 @@ body {
 }
 
 
+.main__testiomonials {
+    padding-bottom: 195px;
+}
+
 
 .button {
     display: inline-block;
@@ -418,6 +422,15 @@ body {
 
 }
 
+.heading--center {
+    text-align: center;
+
+    position: relative;
+
+}
+
+
+
 .heading--text-center::before {
     content: "";
     display: block;
@@ -596,7 +609,7 @@ body {
     display: block;
     width: 24px;
     height: 24px;
-    background: url("../images/icons/arrow-right.svg") 0 2px / 100% no-repeat;
+    background: url("../images/icons/arrow-right-red.svg") 0 2px / 100% no-repeat;
     margin-left: 11px;
 }
 
@@ -690,10 +703,10 @@ body {
 .main__team {}
 
 .team {
-background: url("../images/decor/shapes-team.svg") 200px 30px no-repeat;
-background-color: #F4F5F6;
-position: relative;
-z-index:0
+    background: url("../images/decor/shapes-team.svg") 200px 30px no-repeat;
+    background-color: #F4F5F6;
+    position: relative;
+
 }
 
 
@@ -711,6 +724,7 @@ z-index:0
     right: 0;
     bottom: 0;
 
+
 }
 
 
@@ -719,6 +733,7 @@ z-index:0
     line-height: 0;
     border-radius: 50%;
     position: relative;
+    z-index: 5;
 }
 
 .team__slider-arrow::before {
@@ -834,3 +849,191 @@ z-index:0
 .team__info-position {
     color: #787A80;
 }
+
+
+/* -----------------------------TESTIMONIALS--------------------------------- */
+
+
+
+.testimonials {
+    background-color: #F4F5F6;
+
+}
+
+.container {}
+
+.testimonials__inner {}
+
+.testimonials__heading {
+
+
+    margin-bottom: 60px;
+}
+
+
+.testimonials__slider-wrapper {
+    padding: 0 50px;
+    position: relative;
+
+}
+
+.heading {}
+
+.heading__subtitle {}
+
+.heading__title {}
+
+.testimonials__slider {
+    max-width: 1020px;
+    margin: 0 auto;
+    border-radius: 4px;
+    background-color: white;
+}
+
+.testimonials__slide {
+    padding: 64px;
+}
+
+.testimonials__slide-inner {
+    max-width: 810px;
+    margin: 0 auto;
+    padding-left: 58px;
+
+}
+
+.testimonials__quote {
+    font-size: 20px;
+    line-height: 150%;
+    margin-bottom: 24px;
+    position: relative;
+}
+
+.testimonials__quote::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -58px;
+    background: url(../images/icons/quote-icon.svg) 0 0 / 100% no-repeat;
+    width: 28px;
+    height: 20px;
+}
+
+.testimonials__user {
+    display: flex;
+    align-items: center;
+}
+
+.testimonials__avatar {
+    border-radius: 50%;
+    overflow: hidden;
+    margin-right: 20px;
+}
+
+.testimonials__info {}
+
+.testimonials__info-name {
+    color: #1E212C;
+    font-weight: 700;
+    margin-bottom: 4px;
+
+}
+
+.testimonials__info-position {
+    color: #787A80;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 150%;
+    /* 21px */
+}
+
+
+.testimonials__arrow {
+    position: absolute;
+    top: 0%;
+    bottom: 0;
+    width: 50px;
+    display: flex;
+    align-items: center;
+    z-index: 5;
+}
+
+.testimonials__arrow path {
+    transition: all .3s;
+
+}
+
+.testimonials__arrow::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 50%;
+     width: 48px;
+    height: 48px;
+    background-color: #FF3F3A;
+    border-radius: 50%;
+    z-index: -1;
+    transition: all .3s;
+}
+
+
+
+.testimonials__prev {
+    left: 0;
+
+}
+
+.testimonials__prev::before {
+    transform: translate(-50%, -50%) scale(0);
+    left: 22%;
+  }
+
+.testimonials__next {
+    right: 0;
+    justify-content: flex-end;
+}
+
+.testimonials__next::before {
+    transform: translate(50%, -50%) scale(0);
+    right: 22%;
+  }
+
+
+.testimonials__arrow:hover path {
+    fill: white;
+
+
+}
+
+.testimonials__prev:hover::before {
+    transform: translate(-50%, -50%) scale(1);
+
+}
+
+
+
+.testimonials__next:hover::before{
+    transform: translate(50%, -50%) scale(1);
+
+}
+
+.testimonials__dots .slic-dots {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.testimonials__dots li {
+    
+}
+
+.testimonials__dots .slic-active {
+    
+    
+}
+
+.testimonials__dots button {
+font-size: 0;
+background: transparent;
+    
+}
+
