--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -856,184 +856,186 @@ body {
 
 
 .testimonials {
-    background-color: #F4F5F6;
-
-}
-
-.container {}
-
-.testimonials__inner {}
-
-.testimonials__heading {
-
-
+    background: #F4F5F7;
+    position: relative;
+  }
+  
+  .testimonials::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-44.9%, -55.4%);
+    background: url("../images/decor/testi-bg.svg") 0 0 / 100% no-repeat;
+    width: 1971px;
+    height: 816px;
+  }
+  
+  .testimonials__inner {
+    position: relative;
+    z-index: 1;
+  }
+  
+  .testimonials__heading {
     margin-bottom: 60px;
-}
-
-
-.testimonials__slider-wrapper {
+  }
+  
+  .testimonials__slider-wrapper {
     padding: 0 50px;
     position: relative;
-
-}
-
-.heading {}
-
-.heading__subtitle {}
-
-.heading__title {}
-
-.testimonials__slider {
+    margin-bottom: 50px;
+  }
+  
+  .testimonials__slider {
     max-width: 1020px;
     margin: 0 auto;
-    border-radius: 4px;
-    background-color: white;
-}
-
-.testimonials__slide {
+  }
+  
+  .testimonials__slide {
     padding: 64px;
-}
-
-.testimonials__slide-inner {
+    background-color: #fff;
+    border-radius: 4px;
+  }
+  
+  .testimonials__slide-inner {
     max-width: 810px;
     margin: 0 auto;
     padding-left: 58px;
-
-}
-
-.testimonials__quote {
+  }
+  
+  .testimonials__quote {
     font-size: 20px;
     line-height: 150%;
     margin-bottom: 24px;
     position: relative;
-}
-
-.testimonials__quote::before {
+  }
+  
+  .testimonials__quote::before {
     content: "";
     position: absolute;
     top: 0;
     left: -58px;
-    background: url(../images/icons/quote-icon.svg) 0 0 / 100% no-repeat;
+    background: url("../images/icons/quote-icon.svg") 0 0 / 100% no-repeat;
     width: 28px;
     height: 20px;
-}
-
-.testimonials__user {
+  }
+  
+  .testimonials__user {
     display: flex;
     align-items: center;
-}
-
-.testimonials__avatar {
+  }
+  
+  .testimonials__avatar {
     border-radius: 50%;
     overflow: hidden;
     margin-right: 20px;
-}
-
-.testimonials__info {}
-
-.testimonials__info-name {
+  }
+  
+  .testimonials__info {}
+  
+  .testimonials__info-name {
     color: #1E212C;
     font-weight: 700;
     margin-bottom: 4px;
-
-}
-
-.testimonials__info-position {
-    color: #787A80;
+  }
+  
+  .testimonials__info-position {
     font-size: 14px;
-    font-weight: 400;
     line-height: 150%;
-    /* 21px */
-}
-
-
-.testimonials__arrow {
+    color: #787A80;
+  }
+  
+  .testimonials__arrow {
     position: absolute;
-    top: 0%;
+    top: 0;
     bottom: 0;
     width: 50px;
     display: flex;
     align-items: center;
     z-index: 5;
-}
-
-.testimonials__arrow path {
+  }
+  
+  .testimonials__arrow path {
     transition: all .3s;
-
-}
-
-.testimonials__arrow::before {
+  }
+  
+  .testimonials__arrow::before {
     content: "";
     display: block;
     position: absolute;
     top: 50%;
-     width: 48px;
+    width: 48px;
     height: 48px;
     background-color: #FF3F3A;
     border-radius: 50%;
     z-index: -1;
     transition: all .3s;
-}
-
-
-
-.testimonials__prev {
+  }
+  
+  .testimonials__prev {
     left: 0;
-
-}
-
-.testimonials__prev::before {
+  }
+  
+  .testimonials__prev::before {
     transform: translate(-50%, -50%) scale(0);
     left: 22%;
   }
-
-.testimonials__next {
+  
+  .testimonials__next {
     right: 0;
     justify-content: flex-end;
-}
-
-.testimonials__next::before {
+  }
+  
+  .testimonials__next::before {
     transform: translate(50%, -50%) scale(0);
     right: 22%;
   }
-
-
-.testimonials__arrow:hover path {
-    fill: white;
-
-
-}
-
-.testimonials__prev:hover::before {
+  
+  .testimonials__arrow:hover path {
+    fill: #fff;
+  }
+  
+  .testimonials__prev:hover::before {
     transform: translate(-50%, -50%) scale(1);
-
-}
-
-
-
-.testimonials__next:hover::before{
+  
+  
+  }
+  
+  .testimonials__next:hover::before {
     transform: translate(50%, -50%) scale(1);
-
-}
-
-.testimonials__dots .slic-dots {
+  }
+  
+  .testimonials__dots .slick-dots {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.testimonials__dots li {
-    
-}
-
-.testimonials__dots .slic-active {
-    
-    
-}
-
-.testimonials__dots button {
-font-size: 0;
-background: transparent;
-    
-}
-
+  }
+  
+  .testimonials__dots li {
+    margin-right: 12px;
+  }
+  
+  .testimonials__dots li:last-child {
+    margin-right: 0;
+  }
+  
+  .testimonials__dots button {
+    font-size: 0;
+    background-color: transparent;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+  }
+  
+  .testimonials__dots button::before {
+    content: "";
+    height: 3px;
+    width: 100%;
+    background-color: #B3B7BC;
+    border-radius: 3px;
+  }
+  
+  .testimonials__dots .slick-active button::before {
+    background-color: #424551;
+    transition: all .3s;
