--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -1081,4 +1081,9 @@ opacity: .4;
       opacity: 1;
     }
 
+    /* -------------------END COMPANIES---------------------------- */
+
+    
+
+    
 
