--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -1039,3 +1039,53 @@ body {
   .testimonials__dots .slick-active button::before {
     background-color: #424551;
     transition: all .3s;
+  }
+
+   
+.companies {
+    background: #F4F5F7;
+  }
+  
+  .companies__inner {
+    position: relative;
+  }
+  
+  .companies__inner::before {
+    content: "";
+    position: absolute;
+    left: -230px;
+    bottom: -120px;
+    background: url("../images/decor/5.svg") 0 0 / 100% no-repeat;
+    width: 90px;
+    height: 90px;
+  }
+  
+  .companies__heading {
+    margin-bottom: 60px;
+  }
+  
+  .companies__grid {
+    display: grid;
+    grid-template: repeat(2, auto) / repeat(6, 1fr);
+    gap: 40px 8.1%;
+  }
+  
+  .companies__grid-item {}
+  
+  .companies__grid-link {
+    display: block;
+  }
+  
+  .companies__grid-link img {
+    width: 100%;
+    height: 100%;
+    filter: grayscale(1);
+    opacity: .4;
+    transition: all 1.3s;
+  }
+  
+  .companies__grid-link:hover img {
+    filter: grayscale(0);
+    opacity: 1;
+    transition: all .3s;
+  } 
