--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -1173,3 +1173,103 @@ margin: 16px 0 24px 0;
     height: 100%;
     
 }
+
+/* ------------------------------------------------------------------- */
+
+.accordion__item {
+    max-width: 600px;
+    margin-bottom: 0.5rem;
+    border-radius: 0.25rem;
+    box-shadow: 0 0.125rem 0.25rem rgb(0 0 0 / 15%);
+  }
+  
+
+.accordion__header {
+display: flex;
+color: #FF3F3A;
+font-size: 20px;
+font-weight: 400;
+line-height: 150%;
+position: relative;
+margin-bottom: 24px;
+cursor: pointer;
+
+}
+
+
+.accordion__header p{
+    margin-left: 8px;
+    color: #1E212C;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 150%;
+    
+      
+    
+    /* display: flex;
+    justify-content: space-between; */
+    /* align-items: center; */
+    /* padding: 0.75rem 1rem; */
+    /* color: #fff; */
+    /* font-weight: 500; */
+    /* background-color: #0d6efd; */
+    /* border-top-left-radius: 0.25rem;
+    border-top-right-radius: 0.25rem; */
+    cursor: pointer;
+    /* transition: background-color 0.2s ease-out; */
+  }
+  
+
+  .accordion__header::after {
+    /* content: "";
+    background: url("../images/icons/plus.svg") 0 0 /100% no-repeat;
+    position: absolute;
+    top: 50%;
+    left: -20px;
+    transform: translate(-50%, -50%);
+    width: 20px;
+    height: 20px; */
+    
+   
+    flex-shrink: 0;
+    width: 1.25rem;
+    height: 1.25rem;
+    margin-left: auto;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+    background-size: 1.25rem;
+    content: "";
+  }
+  
+  .accordion__item_show .accordion__header::after {
+    transform: rotate(-180deg);
+  }
+  
+  /* .accordion__header:hover {
+    background-color: #0b5ed7;
+  } */
+
+  .accordion__item_hidden .accordion__header {
+    border-bottom-right-radius: 0.25rem;
+    border-bottom-left-radius: 0.25rem;
+  }
+
+
+  .accordion__body {
+    padding: 0.75rem 1rem;
+    overflow: hidden;
+    background: #fff;
+    border-bottom-right-radius: 0.25rem;
+    border-bottom-left-radius: 0.25rem;
+  }
+  
+  .accordion__item:not(.accordion__item_show) .accordion__header {
+    border-bottom-right-radius: 0.25rem;
+    border-bottom-left-radius: 0.25rem;
+  }
+
+
+  .accordion__item:not(.accordion__item_show) .accordion__body {
+    display: none;
+  }
+  
