--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -1110,10 +1110,6 @@ body {
 }
 
 
-
-
-
-
 .accordion__item {
     max-width: 600px;
 }
@@ -1171,18 +1167,79 @@ body {
 
 }
 
-.accordion__body{
+.accordion__body {
     margin: -8px 0 24px;
 }
 
 
-.accordion__item{
- transition: 0.8s ease-out;
+.accordion__item {
+    transition: 0.8s ease-out;
 }
 
 
-.accordion__item_show{
+.accordion__item_show {
     transition: 0.8s ease-out;
 
-} 
+}
+
+
+/* -------------------END PROGRAM ---------------------------- */
+
+
+.blog__wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 60px;
+}
+
+
+.blog__content {
+    display: flex;
+    justify-content: space-between;
+    margin-right: 30px;
+    margin-bottom: 600px;
+}
+
+.blog__content:last-child {
+    margin-right: 0;
+}
+
+.blog__captions{
+    display: flex;
+ 
+   
+}
+
+.blog__captions li{
+    margin-right: 8px;
+}
+
+.blog__captions .mark{
+    background:url("../images/icons/clock-icon.svg") right center no-repeat;
+}
+
+
+.blog__content-text{
+    max-width: 390px;
+}
+
+.blog__content-text p{
+    color: var(--gray-900, #1E212C);
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 150%; /* 30px */
+    margin: 8px 0 8px;
+
+}
+
+.blog__content-text span{
+    display: block;
+color: var(--gray-800, #424551);
+font-size: 16px;
+font-weight: 400;
+line-height: 160%; /* 25.6px */
+margin-bottom: 16px;
+
+}
 
