--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -44,6 +44,14 @@ body {
     padding: 116px 0 186px;
 }
 
+.main__blog {
+    padding-bottom: 213px;
+}
+
+.main__contact{
+   padding-bottom: 180px;
+}
+
 .button {
     display: inline-block;
     font-weight: 700;
@@ -546,7 +554,7 @@ body {
 
 .directions__list-link:hover .directions__link-btn {
     color: #FF3F3A;
-    transition: all 1s;
+    transition: all .3s;
 
 }
 
@@ -1189,7 +1197,7 @@ body {
 .blog__wrapper {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-end;
     margin-bottom: 60px;
 }
 
@@ -1198,7 +1206,6 @@ body {
     display: flex;
     justify-content: space-between;
     margin-right: 30px;
-    margin-bottom: 600px;
 }
 
 .blog__content:last-child {
@@ -1207,16 +1214,16 @@ body {
 
 
 
-.blog__content-image-box{
+.blog__content-image-box {
     position: relative;
-z-index: 1;
-margin: 0 30px 16px 0;
-width: 100%;
+    z-index: 1;
+    margin: 0 30px 16px 0;
+    width: 100%;
 
 }
 
 
-.blog__image-icon{
+.blog__image-icon {
     position: absolute;
     z-index: 2;
     top: 12px;
@@ -1224,21 +1231,28 @@ width: 100%;
 
 }
 
-.blog__captions{
-   display: flex;
-   position: relative;
-    
+.blog__captions {
+    display: flex;
+    position: relative;
+
 }
 
-.blog__captions li{
+.blog__podcast:hover {
+    box-shadow: 0px 4px 4px -4px rgba(30, 33, 44, 0.03), 0px 12px 10px -6px rgba(154, 156, 165, 0.04), 0px 30px 24px -10px rgba(154, 156, 165, 0.05), 0px 80px 80px -20px rgba(154, 156, 165, 0.08);
+    transition: all 0.3s;
+
+}
+
+
+.blog__captions li {
     margin-right: 8px;
 }
 
-.blog__captions-icon{
+.blog__captions-icon {
     position: relative;
 }
 
-.blog__captions-icon svg{
+.blog__captions-icon svg {
     position: absolute;
     top: 50%;
     left: 18px;
@@ -1246,36 +1260,176 @@ width: 100%;
 
 }
 
-.blog__captions-data{
-padding-left: 36px;
+.blog__captions-data {
+    padding-left: 36px;
 }
 
-.blog__captions-clock{
-padding-left: 36px;
+.blog__captions-clock {
+    padding-left: 36px;
 
 }
 
-.blog__content-text{
+.blog__content-text {
     max-width: 390px;
 }
 
-.blog__content-text p{
+.blog__content-text p {
     color: var(--gray-900, #1E212C);
     font-size: 20px;
     font-weight: 700;
-    line-height: 150%; /* 30px */
+    line-height: 150%;
+    /* 30px */
     margin: 8px 0 8px;
 
 }
 
-.blog__content-text span{
+.blog__content-text span {
     display: block;
-color: var(--gray-800, #424551);
-font-size: 16px;
-font-weight: 400;
-line-height: 160%; /* 25.6px */
-margin-bottom: 16px;
+    color: var(--gray-800, #424551);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 160%;
+    /* 25.6px */
+    margin-bottom: 16px;
 
 }
 
+.blog__content-link-btn {
+    display: flex;
+    color: var(--gray-900, #1E212C);
+    font-weight: 700;
+    line-height: 160%;
+
+}
+
+
+.blog__content-link-btn::after {
+    content: "";
+    display: block;
+    width: 24px;
+    height: 24px;
+    background: url("../images/icons/arrow-right-red.svg") 0 2px / 100% no-repeat;
+    margin-left: 11px;
+}
+
+.blog__content-link-btn:hover {
+    color: #FF3F3A;
+    transition: all .3s;
+
+}
+
+
 /* -------------------END BLOG ---------------------------- */
+
+.contact__inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+
+
+.contact__info {
+    padding: 40px 0 48px;
+    margin-right: 30px;
+}
+
+
+
+.contact__info p {
+    color: var(--gray-700, #787A80);
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 150%;
+    /* 21px */
+}
+
+.contact__info a {
+    color: var(--gray-900, #1E212C);
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 150%;
+    /* 27px */
+}
+
+.contact__info {
+    margin-left: 36px;
+}
+
+.contact__info-mail {
+    position: relative;
+    margin-bottom: 24px;
+
+}
+
+
+.contact__info-phone {
+    position: relative;
+    margin-bottom: 24px;
+
+}
+
+.contact__info-address {
+    position: relative;
+
+}
+
+
+
+.contact__info-mail::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -36px;
+    background: url("../images/icons/chat-icon.svg") no-repeat;
+    width: 24px;
+    height: 24px;
+}
+
+
+.contact__info-phone::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -36px;
+    background: url("../images/icons/phone-icon.svg") no-repeat;
+    width: 24px;
+    height: 24px;
+
+}
+
+.contact__info-address::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -36px;
+    background: url("../images/icons/mark-icon.svg") no-repeat;
+    width: 24px;
+    height: 24px;
+}
+
+.contact__icons {
+    color: var(--gray-900, #1E212C);
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 150%;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+}
+
+.contact__icons p {
+    margin-bottom: 24px;
+}
+
+.contact__icons-box {
+    display: flex;
+    align-items: center;
+}
+
+.contact__icons-box-item {
+    margin-right: 32px;
+}
+
+.contact__map iframe{
+   border-radius: 4px;
+}
