--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -1450,40 +1450,50 @@ body {
 
 /* -------------------END CONTACT ---------------------------- */
 
-.form__input{
+.form__input {
+    padding-top: 40px;
     max-width: 705px;
-}
-
-.form__input-field{
     display: flex;
-      
+    flex-wrap: wrap;
 }
 
-.form__input-control {
+.form__item {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 24px;
+}
+
+
+.form__item-input {
     width: 340px;
     height: 52px;
     border-radius: 4px;
     border: 1px solid #D7DADD;
     background: #FFF;
-    padding: 13px 218px 13px 16px;
+    padding: 13px 205px 13px 16px;
     font-weight: 400;
     line-height: 160%;
     color: #9A9CA5;
-  
+
 }
 
-.form__input-control:nth-child(-2n+3){
+.form__item-label {
+    color: #424551;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 160%;
+    margin-bottom: 8px;
+}
+
+
+.form__item:nth-child(-2n+3) {
     margin-right: 20px;
 }
 
 
-.form__input-items label{
-    display: block;
-}
-
-.form__input-message{
+.form__input-message {
     width: 705px;
-    margin-top: 24px;
+    height: 128px;
     border-radius: 4px;
     border: 1px solid #D7DADD;
     background: #FFF;
@@ -1494,3 +1504,16 @@ body {
 
 }
 
+
+.form__btn-box {
+    padding-top: 48px;
+
+}
+
+.form__item-checkbox {
+    width: 287px;
+    color: #424551;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 160%;
+}
