end form section

--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -1455,7 +1455,6 @@ body {
 
 /* -------------------END CONTACT ---------------------------- */
 
-
 .form__inner {
     display: flex;
     justify-content: space-between;
@@ -1463,7 +1462,6 @@ body {
 }
 
 .form__image-box {
-   
     padding-right: 30px;
 
 }
@@ -1503,11 +1501,9 @@ body {
     margin-bottom: 8px;
 }
 
-
 .form__item:nth-child(-2n+3) {
     margin-right: 20px;
 }
-
 
 .form__input-message {
     width: 705px;
@@ -1529,11 +1525,6 @@ body {
     width: 100%;
 }
 
-
-
-
-
-
 .form__btn.button {
     width: 340px;
     text-align: center;
@@ -1541,8 +1532,7 @@ body {
 
 
 .form__item-checkbox {
-    display: flex;
-    /* align-items: flex-start; */
+
     width: 287px;
     color: #424551;
     font-size: 16px;
@@ -1553,5 +1543,97 @@ body {
 .form__item-chek-label {
     padding-left: 20px;
 
-
 }
+
+.control {
+    display: block;
+    position: relative;
+    padding-left: 34px;
+    margin-bottom: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.control input {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+}
+
+.control_indicator {
+    position: absolute;
+    top: 5px;
+    left: 0;
+    height: 16px;
+    width: 16px;
+    background: #e6e6e6;
+    border: 0px solid #000000;
+    border-radius: 0px;
+}
+
+.control:hover input~.control_indicator,
+.control input:focus~.control_indicator {
+    background: #cccccc;
+}
+
+.control input:checked~.control_indicator {
+    background: #ff3f3a;
+}
+
+.control:hover input:not([disabled]):checked~.control_indicator,
+.control input:checked:focus~.control_indicator {
+    background: #0e6647d;
+}
+
+.control input:disabled~.control_indicator {
+    background: #e6e6e6;
+    opacity: 0.6;
+    pointer-events: none;
+}
+
+
+.control_indicator:after {
+    box-sizing: unset;
+    content: '';
+    position: absolute;
+    display: none;
+}
+
+.control input:checked~.control_indicator:after {
+    display: block;
+}
+
+.control-checkbox .control_indicator:after {
+    left: 7px;
+    top: 1px;
+    width: 3px;
+    height: 8px;
+    border: solid #ffffff;
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
+}
+
+
+.control-checkbox input:disabled~.control_indicator:after {
+    border-color: #7b7b7b;
+}
+
+.control-checkbox .control_indicator::before {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 4.5rem;
+    height: 4.5rem;
+    margin-left: -1.3rem;
+    margin-top: -1.3rem;
+    background: #2aa1c0;
+    border-radius: 3rem;
+    opacity: 0.6;
+    z-index: 99999;
+    transform: scale(0);
+}
+
+
+/* -------------------END FORM ---------------------------- */
