fixed submit button

--- a/createx/css/style.css
+++ b/createx/css/style.css
@@ -1506,6 +1506,7 @@ body {
 }
 
 .form__input-message {
+    resize: none;
     width: 705px;
     height: 128px;
     border-radius: 4px;
@@ -1528,6 +1529,7 @@ body {
 .form__btn.button {
     width: 340px;
     text-align: center;
+    font-size: 16px;
 }
 
 
@@ -1634,6 +1636,8 @@ body {
     z-index: 99999;
     transform: scale(0);
 }
+
+
 
 
 /* -------------------END FORM ---------------------------- */
